apps/generic/overlays/rdiffweb/patches/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdiffweb
spec:
  template:
    spec:
      containers:
        - name: container
          image: docker.io/ikus060/rdiffweb:2.11.0
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /etc/rdiffweb/
              subPath: configs/rdiffweb
            - name: backup-volume
              mountPath: /backups
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
