apps/generic/overlays/rdiffweb/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdiffweb
  namespace: default
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
