apps/generic/overlays/rdiffweb/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdiffweb
  annotations:
    forecastle.stakater.com/appName: "Backups (rdiffweb)"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://rdiffweb.org/web/image/website/2/logo/Rdiffweb?unique=1d91d70"
